# mcp-memory-service

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile.memory-mcp  README.md  mcp-all-in-one.yaml  pyproject.toml
.claude/directives/: memory-first.md
.github/workflows/: codeql.yml  docker-publish.yml  dockerfile-lint.yml
deploy/k8s/: memory-mcp-milvus.yaml  milvus-standalone.yaml  push-images-to-tcr-job.yaml
docs/: build-memory-mcp-image.md  build-torch-cpu-base-image.md  deployment-workflow.md  index.html  mcp-memory-service-deep-dive.md  memory-mcp-tools-guide.md  milvus-deployment-guide.md  push-images-to-tcr.md  slides-mcp-memory-service.md  tech-sharing-ai-memory.md
examples/plugin-audit-log/: README.md  pyproject.toml
examples/plugin-audit-log/mcp_memory_plugin_audit_log/: __init__.py
scripts/: test_chinese_embedding.py
scripts/deployment/: push-images-to-tcr.sh
src/mcp_memory_service/: _version.py  server_impl.py
src/mcp_memory_service/consolidation/: consolidator.py
src/mcp_memory_service/plugins/: __init__.py  context.py  registry.py
src/mcp_memory_service/services/: memory_service.py
src/mcp_memory_service/storage/: milvus.py
src/mcp_memory_service/web/api/: memories.py
src/mcp_memory_service/web/static/: app.js
tests/: __init__.py
tests/plugins/: test_plugin_hooks.py  test_wiring.py
tools/docker/: Dockerfile
